development home at https://github.com/projectestac/agora_moodle2

Changes in progress
---------------------------------------------------------------------------------------
- H5P: Upgraded module to version 1.20.1
- Theme XTEC2: Removed loading of mobile CSS
- Upgraded all wiris plugins
- Upgraded module choicegroup to version 1.18
- Upgraded question type "ordering"


Changes 19.11.14
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.6.6 to v3.6.7
- Updated language packs
- MUC: Changed cache store for coursecat. Moved to default session
- xtec-mailer: Fixed compatibility with PHP 7.3
- Added atto plugin Cloze
- Upgraded all wiris plugins
- Upgraded module hot potatoes
- Upgraded module choicegroup
- Upgraded module H5P
- Upgraded question format hot potatoes
- Upgraded question type "ordering"
- Only allow access to parameter atto_recordrtc | allowedtypes to xtecadmin


Changes 19.09.25
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.6.5 to v3.6.6
- Updated language packs
- Re-added Catalonia to countries list
- Made exception for FRM environment to put cache files in moodledata
- Oauth2 server: Updated code to connect to WordPress
- Marsupial: Updated components
- Upgraded all wiris plugins
- Upgraded module clickedu
- Upgraded module geogebra
- Upgraded module hot potatoes
- Upgraded module H5P
- Upgraded block "completion progress"
- Upgraded question type "ordering"


Changes 19.08.29
---------------------------------------------------------------------------------------
- Fixed cache pollution due to XTEC patches
- Improved cache definitions


Changes 19.07.24
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.4.8 to v3.6.5
- Updated translation files
- Modified theme XTEC2 for compatibility to Moodle v3.6.5
- Upgraded all wiris plugins
- Upgraded module choicegroup